--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,13 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.hibernate.ddl-auto=update
 
-
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
+activemq.queue.name=sample-queue
+activemq.topic.name=sample-topic
+
+logging.level.root=info
