--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-activemq'
 	implementation group: 'org.springframework', name: 'spring-jms', version: '6.2.0'
+	implementation group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
 }
 
 tasks.named('test') {
